2014-02-28  Araki Ken  <arakiken@users.sf.net>

	* fb/x_imagelib.c: load_file() calls x_display_get_bitmap() on Android
	  instead of executing mlimgloader.

	* MLActivity.java: getBitmap() which loads image files is added.

	* android/jni/x_display.[ch]: x_display_get_bitmap() which calls
	  MLActivity::getBitmap() is added.

	* AndroidManifest.xml: android.permission.INTERNET is added.

2014-02-27  Araki Ken  <arakiken@users.sf.net>

	* kik_pty_streams.c: Control characters defaults macros are added for Android.

	* version.h.in: 3.3.3 -> 3.3.3post

2014-02-22  Araki Ken  <arakiken@users.sf.net>

	* 3.3.3 released.
	  (tag "rel-3_3_3")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h, doc/en/ReleaseNote:
	  updated for 3.3.3.

	* android/jni/x_display.c:
	  Java_mlterm_native_1activity_MLActivity_visibleFrameChanged() doesn't
	  change width and height of the display if new width or height is less
	  than 50 pixels.

2014-02-20  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c:
	  - rotate_mouse_cursor_shape() is added.
	  - if -rotate (right|left) option is specified on 8bpp or less
	    framebuffer, rotate_display is set to 0 and rotate_mouse_cursor_shape()
	    is called in x_display_open() to fall back to the normal shape.

	* fb/x_imagelib.c: Illegal memory access in resize_sixel() is fixed.

	* android/jni/Android.mk, java/Makefile.in: Minor fixes.

2014-02-19  Araki Ken  <arakiken@users.sf.net>

	* fb/x_imagelib.c: resize_sixel() is added to resize the sixel image to
	  the screen size.

	* c_imagelib.c:
	  - The sixel width is changed just after parsing the first line to
	    reduce the cost of realloc_pixels() at the end of load_sixel_from_file().
	  - The step of increasing the width and height of the sixel image is
	    changed to 512.

	* win32/x_imagelib.c, gdiplus.cpp, none.cpp: Minor fixes.

	* android/jni/kik_debug.h: kik_msg_printf outputs messages at ANDROID_LOG_INFO level.
